syntax = "proto3";
package sync;
option go_package = "/proto";
option java_package = "com.meta_node.protos.compiled.sync";

import "block.proto";
import "checkpoint.proto";
import "state.proto";
import "block_vote.proto";

message SyncAccoutStates {
    map<string,bytes> StorageData = 1;
    bool Finished = 2;
}

message SyncNodeConsensusConfig {
    uint64 PacksPerEntry = 1;
    uint64 EntriesPerSlot = 2;
    uint64 EntriesPerSecond = 3;
    uint64 HashesPerEntry = 4;
    bytes ValidatorMinStakeAmount = 5;
    bytes StartRewardAmount = 6;
    bytes HalvingAfterBlockCount = 7;
}

message ValidatorSyncData {
  block.Block LatestBlock = 1;
  checkpoint.ValidatorCheckPoint LatestCheckPoint = 2;
  block.Block LatestCheckPointBlock = 3;
  repeated account_state.StorageData StakeStorageData = 4;
  repeated block_vote.BlockVote PendingBlockVotes = 5;
}

message GetNodeSyncData {
	uint64 LatestCheckPointBlockNumber = 1; 
	bytes ValidatorAddress = 2; 
  int64 NodeStatesIndex = 3; 
}

message NodeSyncData {
	bytes ValidatorAddress = 1;
	int64 NodeStatesIndex = 2; 
	bytes AccountStateRoot = 3; 
  repeated account_state.StorageData StorageData = 4;
  bool Finished = 5;
}
